syntax = "proto3";
import "messages_robocup_ssl_detection.proto";
import "messages_robocup_ssl_geometry.proto";
import "referee.proto";
option go_package = "ssl";

service RoboIMEAtlas{
  rpc GetFrame(FrameRequest) returns (stream SSL_WrapperPacket){}
  rpc GetGeometry(FrameRequest) returns (SSL_GeometryData){}
  rpc GetActiveMatches(ActiveMatchesRequest) returns (MatchesPacket){}
  rpc GetMatchInfo(MatchInfoRequest) returns (SSL_Referee){}
}

message FrameRequest {
  int32 match_id = 1;
}

message ActiveMatchesRequest {
}

message MatchInfoRequest {
	int32 match_id = 1;
}

message MatchesPacket {
	repeated MatchData match = 1;
}

message MatchData {
	int32 match_id = 1;
	string match_name = 2;
}

message SSL_WrapperPacket {
  SSL_DetectionFrame detection = 1;
  SSL_GeometryData geometry = 2;
}

